# openballbot-rl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ballbot_gym/: README.md  __init__.py  pyproject.toml
ballbot_gym/controllers/: __init__.py  pid.py
ballbot_gym/core/: __init__.py  config.py  factories.py  registry.py
ballbot_gym/envs/: __init__.py  ballbot_env.py  observation_spaces.py
ballbot_gym/models/: __init__.py  ballbot.xml
ballbot_gym/rewards/: __init__.py  base.py  directional.py  distance.py
ballbot_gym/sensors/: __init__.py  rgbd.py  types.py
ballbot_gym/terrain/: __init__.py  bowl.py  gradient.py  hills.py  mixed.py  perlin.py  ramp.py  ridge_valley.py  sinusoidal.py  spiral.py  stepped.py  terraced.py  wavy.py
ballbot_gym/utils/: __init__.py  helpers.py  logging.py
ballbot_rl/: README.md  __init__.py  pyproject.toml
ballbot_rl/data/: __init__.py  collect.py  dataset.py  utils.py
ballbot_rl/encoders/: __init__.py  models.py  pretrain.py  training.py
ballbot_rl/evaluation/: __init__.py  evaluate.py
ballbot_rl/policies/: __init__.py  mlp_policy.py
ballbot_rl/training/: __init__.py  callbacks.py  interactive.py  schedules.py  train.py  utils.py
ballbot_rl/visualization/: visualize_model.py
ballbotgym/: pyproject.toml
ballbotgym/ballbotgym/: Rewards.py  __init__.py  bbot_env.py  terrain.py
configs/: README.md
configs/eval/: default.yaml
configs/train/: ppo_directional.yaml
docs/: 01_research_timeline.md  02_mechanics_to_rl.md  03_environment_and_rl.md  04_visual_diagrams.md  05_code_walkthrough.md  06_glossary.md  07_faq.md  08_quick_reference.md  09_advanced_topics.md  LEARNING_PATHS.md  README.md
docs/api/: code_walkthrough.md
docs/architecture/: README.md  component_system.md  design_decisions.md  extension_guide.md
docs/concepts/: ballbot_mechanics.md  observation_design.md  reward_design.md  rl_fundamentals.md
docs/design/: diagrams.md
docs/getting_started/: README.md  first_steps.md  installation.md  quick_start.md
docs/research/: code_mapping.md  mechanics_to_rl.md  terrain_types_for_ballbot.md  timeline.md
docs/tutorials/: 00_ballbot_introduction.md  01_introduction_to_gymnasium.md  02_action_spaces_in_rl.md  03_observation_spaces_in_rl.md  04_reward_design_for_robotics.md  05_actor_critic_methods.md  06_environment_wrappers.md  07_camera_rendering_in_mujoco.md  08_working_with_mujoco_simulation_state.md  09_hyperparameter_tuning.md  10_multimodal_fusion.md  11_debugging_visualization.md  12_sim_to_real_transfer.md  13_complete_training_guide.md  14_curriculum_learning.md  15_terrain_generation.md  16_terrain_types_guide.md  DEPENDENCIES.md  README.md
docs/user_guides/: advanced_topics.md  experiment_organization.md  faq.md  glossary.md  quick_reference.md  training.md  visualization.md
examples/: 01_basic_usage.py  02_custom_reward.py  03_custom_terrain.py  04_custom_policy.py  05_training_workflow.py  06_configuration_examples.py  README.md  terrain_examples.yaml  terrain_visualization.py
outputs/experiments/runs/legacy/: config.yaml  info.txt  progress.csv
outputs/experiments/runs/legacy/results/: evaluations.npz
policies/: policies.py
scripts/: test_pid.py  train.py
scripts/setup/: clean_install.sh  install.sh  install_mujoco.sh  verify_installation.py
scripts/utils/: archive_model.py  enhance_archived_models.py  evaluate_archived_models.py  generate_training_plots.py  scan_and_archive_runs.py  visualize_all_archived_models.py
tests/: conftest.py
tests/integration/: test_component_system.py
tests/unit/: test_env.py  test_factories.py  test_registry.py  test_rewards.py  test_terrains.py
